--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/passport-local": "^1.0.33",
+    "bcrypt": "^4.0.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.0.0",
