--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^4.0.1",
+    "jwt-decode": "^2.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.0.0",
